# template_programming_workshop

./: .clang-format  .gitignore  CMakeLists.txt  jamroot  jamroot.jam  meson.build  presentation.org  template_programming_workshop.org
src/: CMakeLists.txt  frame.cpp  jamfile.jam  main.cpp  mp11.cpp
workshop/: main.cpp
